--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
 
+  <script src="https://kit.fontawesome.com/0f83e5d3b7.js" crossorigin="anonymous"></script>
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
